--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ org.gradle.parallel=true
 kotlinVersion=1.7.21
 
 kotlin.stdlib.default.dependency=false
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-17.jdk/Contents/Home
