--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,7 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.enterprise" version "3.11.1"
-	id "io.spring.ge.conventions" version "0.0.11"
+//	id "io.spring.ge.conventions" version "0.0.11"
 }
 
 include "spring-aop"
@@ -58,3 +58,5 @@ settings.gradle.projectsLoaded {
 		}
 	}
 }
+include 'spring-sample'
+
